fix header on mobile using media querys

--- a/css/styles.css
+++ b/css/styles.css
@@ -477,7 +477,7 @@ header .logo {
 header .user, header .name {
   display: inline-block;
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -485,10 +485,12 @@ header .user, header .name {
 header .notification-bell img {
   height: 30px;
   padding-right: 20px;
+  padding-left: 20px;
 }
 header .name {
   padding-left: 20px;
   border-left: 1px solid black;
+  height: 50px;
 }
 header .notification-bell, header img, header h3 {
   display: inline-block;
@@ -514,6 +516,43 @@ header .notification-bell, header img, header h3 {
   }
   .widget-container-half {
     width: 45vw;
+  }
+
+  header {
+    width: 100vw;
+    color: #FFF;
+    background-color: #7477BF;
+    font-weight: normal;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  header span {
+    font-weight: bold;
+  }
+  header .logo {
+    margin-right: auto;
+    margin-left: 20px;
+    display: inline-block;
+  }
+  header .user, header .name {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  header .notification-bell img {
+    height: 30px;
+    padding-right: 20px;
+  }
+  header .name {
+    padding-left: 20px;
+    border-left: 1px solid black;
+  }
+  header .notification-bell, header img, header h3 {
+    display: inline-block;
   }
 }
 
