--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -28,7 +28,7 @@ header {
     .user, .name{
         display: inline-block;
         margin-left: auto;
-        margin-right: 20px;
+        margin-right: 10px;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -37,11 +37,13 @@ header {
     .notification-bell img{
         height: 30px;
         padding-right: 20px;
+        padding-left: 20px;
     }
 
     .name{
         padding-left: 20px;
         border-left: 1px solid black;
+        height: 50px;
     }
      .notification-bell, img, h3{
         display: inline-block;
